# Leonidas-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint
LeoEngine/: CMakeLists.txt
LeoEngine/LEO/: LeoEngine.h
LeoEngine/LEO/Core/: Application.cpp  Application.h  Event.h  Layer.h  LayerStack.cpp  LayerStack.h
LeoEngine/LEO/ECS/: ComponentArray.h  ComponentStoreSparse.h  EntityManager.cpp  EntityManager.h  IComponentStore.h  ISystem.h  leo_ecs.cpp  leo_ecs.h
LeoEngine/LEO/Graphics/: BufferObjects.cpp  BufferObjects.h  FrameBuffer.cpp  FrameBuffer.h  LeoGraphics.cpp  LeoGraphics.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
LeoEngine/LEO/Log/: Channel.cpp  Channel.h  Entry.h  EntryBuilder.cpp  EntryBuilder.h  LeoAssert.cpp  LeoAssert.h  Level.cpp  Level.h  Log.cpp  Log.h  LogLevel.cpp  LogLevel.h
LeoEngine/LEO/Platform/: Event.h  Keys.h  LeoWindow.cpp  LeoWindow.h
LeoEngine/LEO/Utilities/: LeoColors.h  LeoFileUtilities.cpp  LeoFileUtilities.h  LeoRand.cpp  LeoRand.h  LeoTimer.h  LeoTypes.h  Timer.h  Types.h  pch.h
LeoEngine/LEO/Window/: Window.cpp  Window.h
Projects/Asteroids/: CMakeLists.txt
Projects/Asteroids/src/: Asteroids.cpp  Asteroids.h  components.cpp  components.h  main.cpp
Projects/SandBox/: CMakeLists.txt
Projects/SandBox/src/: Components.h  SandBox.cpp  SandBox.h  Systems.h  main.cpp
Projects/TestProject/: CMakeLists.txt
Projects/TestProject/src/: main.cpp
resources/Shaders/CircleShader/: basic.frag  basic.vert
resources/Shaders/TestProject/: Shader.frag  Shader.vert
resources/TestProject/: basic.frag  basic.vert  basicTex.frag  basicTex.vert
